Rework module definition
To simplify our migration, we can use our classloader instead
of the classloader provided by the JDK if we use the
ModuleLayer.defineModules instead of
ModuleLayer.defineModulesWithOneLoader

This simplifies the code as we can use the classloader as normal
as we don't need to change the classloader used by the application